--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
 
 #container {
     display: flex;
-    flex-direction: reverse-row;
+    flex-direction: row-reverse;
     align-self: center;
     justify-content: space-between;
     width: 100%;
@@ -24,13 +24,30 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    z-index: 99;
-    margin-left: 85%;
+    z-index: 98;
     width: 15%;
     color:white;
 }
 
 .debugOpt {
+    margin-left: 1.5%;
+    align-self:center;
+}
+
+#startMenu {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    z-index: 99;
+    margin-right: 0%;
+    width: 100%;
+    color:white;
+}
+
+.startOpt {
     margin-left: 1.5%;
     align-self:center;
 }
